Some random tweaks testing on the robot.